--- a/ValuePriceCalculator.Tests.Unit/ValuePriceCalculator.Tests.Unit.csproj
+++ b/ValuePriceCalculator.Tests.Unit/ValuePriceCalculator.Tests.Unit.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ValuePriceCalculator.Core\ValuePriceCalculator.Core.csproj" />
+  </ItemGroup>
+
 </Project>
